# ofm-tg-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CATEGORIES.md  MODEL_SELECTION.md  OPERATIONS.md  PERSONA_DESIGN.md  PHASES.md
personas/default/: persona.md
scripts/: generate_key.py  inspect_db.py
src/: accounts.py  backlog.py  bot_manager.py  classifier.py  commands.py  config.py  crypto.py  event_handler.py  humanizer.py  logging_config.py  main.py  migrations.py  notifier.py  output_validator.py  rate_limiter.py  response_generator.py  safe_sender.py  signal_detector.py  spambot_monitor.py  storage.py  telegram_client.py  watchdog.py
src/llm/: __init__.py  client.py  prompts.py
src/web/: app.py
src/web/routes/: accounts.py  alerts.py  chats.py  logs.py  system.py
src/web/templates/: account_add.html  account_auth.html  account_detail.html  accounts_list.html  alerts_list.html  base.html  chat_detail.html  chat_list.html  logs.html
tests/: conftest.py  test_accounts.py  test_backlog.py  test_bot_manager.py  test_classifier.py  test_commands.py  test_config.py  test_crypto.py  test_event_handler.py  test_humanizer.py  test_migrations.py  test_notifier.py  test_output_validator.py  test_rate_limiter.py  test_response_generator.py  test_safe_sender.py  test_signal_detector.py  test_spambot_monitor.py  test_state_memory.py  test_storage.py
