[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofm-tg-bot"
version = "0.1.0"
description = "Telegram userbot for OnlyFans agency DM management"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.36,<2.0",
    "loguru>=0.7,<0.8",
    "python-dotenv>=1.0,<2.0",
    "cryptography>=43,<46",
    "aiohttp>=3.10,<4.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9,<1.0",
    "sse-starlette>=2.1,<3.0",
    "ollama>=0.4,<1.0",
    "tenacity>=9.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"src/web/routes/*" = ["B008"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "scripts"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = "telethon.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.event_handler"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "src.spambot_monitor"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
